test/classes/initializers/errors/errHandling/throwsInPhase0.good
throwsInPhase0.chpl:12: In initializer:
throwsInPhase0.chpl:13: error: cannot call a throwing function outside of a try! before phase 2
